management/service-discovery/traefik/traefik-ingress-controller.deploy.kube-system.yaml
# kubectl label node k8s-node-1 proxy=traefik
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: traefik-ingress-controller
  namespace: kube-system
  labels:
    app: traefik-ingress-controller
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: traefik-ingress-controller
    spec:
      terminationGracePeriodSeconds: 60
      hostNetwork: true
      restartPolicy: Always
      serviceAccountName: ingress
      nodeSelector:
        proxy: traefik
      containers:
      - name: traefik-ingress-controller
        image: traefik:alpine
        resources:
          requests:
            cpu: 100m
            memory: 20Mi
          limits:
            cpu: 200m
            memory: 30Mi
        ports:
        - name: http-proxy
          containerPort: 80
          hostPort: 80
        - name: webui
          containerPort: 8080
          hostPort: 8080
        args:
        - --web
        - --web.address=:8080
        - --kubernetes
