management/service-discovery/traefik/traefik-ui.svc+ing.kube-system.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-ui
  namespace: kube-system
spec:
  selector:
    app: traefik-ingress-controller
  ports:
  - name: webui
    port: 8080
    targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ui
  namespace: kube-system
spec:
  rules:
  - host: traefik.local
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik-ui
          servicePort: webui
